kubernetes_deploy/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-fala
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laa-fala-app
  template:
    metadata:
      labels:
        app: laa-fala-app
    spec:
      serviceAccountName: laa-fala-staging-irsa-sevice-account
      containers:
      - image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-access/fala:main
        name: app
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 8000
          name: http
