kubernetes_deploy/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laa-fala
  namespace: laa-fala-staging
spec:
  tls:
  - hosts:
    - laa-fala-staging.apps.live-1.cloud-platform.service.justice.gov.uk
  - hosts:
    - staging.find-legal-advice.justice.gov.uk
    secretName: fala-tls-certificate
  rules:
  - host: laa-fala-staging.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fala
          servicePort: 80
  - host: staging.find-legal-advice.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-fala
          servicePort: 80
